made a few changes

--- a/LPB/app.json
+++ b/LPB/app.json
@@ -40,7 +40,7 @@
     /**
      * The Sencha Framework for this application: "ext" or "touch".
      */
-    "framework": "ext",
+    "framework": "ext601",
     
     /**
      * The toolkit to use. Select either "classic" or "modern".
